force-app/main/default/objects/Novidea_Document_Management_List__c/Novidea_Document_Management_List__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Novidea Document Management List</label>
</CustomObject>