force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Account_Relation_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Relation_Api_Name__c</fullName>
    <label>Account Relation Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>