force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Additional_Identifying_Fields_Api_Csv__c.field-meta.xml
<CustomField>
    <fullName>Additional_Identifying_Fields_Api_Csv__c</fullName>
    <label>Additional Identifying Fields Api Csv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>