force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>