force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Default_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Field__c</fullName>
    <description>This is the default email to send when an inboundDocument is being emailed from a list in this entity, or when its single view is opened from a list in this entity and then emailed</description>
    <label>Default Email Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>