force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Default_Fax_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Default_Fax_Number_Field__c</fullName>
    <description>This is the default number to send the fax to when an inboundDocument is being sent from a list in this entity, or when its single view is opened from a list in this entity and then faxed</description>
    <label>Default Fax Number Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>