force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Default_SMS_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Default_SMS_Phone_Field__c</fullName>
    <inlineHelpText>API Name offield for SMS mobile phone</inlineHelpText>
    <label>Default SMS Phone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>