force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Json_Base_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Json_Base_Field_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Json Base Field Name</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>