force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Object_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Type_Name__c</fullName>
    <label>Object Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>