force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Query_Fields_Display_Mark_Obj_Csv__c.field-meta.xml
<CustomField>
    <fullName>Query_Fields_Display_Mark_Obj_Csv__c</fullName>
    <description>Used in DocumentSearchController to select additional lookups for this entity to display as criteria. This value is in addition to the account value that is selected anyway</description>
    <label>Query Fields Display Mark Obj Csv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>