force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Relation_To_Account_Implementation_Class__c.field-meta.xml
<CustomField>
    <fullName>Relation_To_Account_Implementation_Class__c</fullName>
    <label>Relation To Account Implementation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>