force-app/main/default/objects/Novidea_Document_Management_List__c/fields/This_Relation_To_Account_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>This_Relation_To_Account_Api_Name__c</fullName>
    <label>This Relation To Account Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>