force-app/main/default/objects/Novidea_Document_Management_List__c/fields/Value_In_Task_Connect_To_DD__c.field-meta.xml
<CustomField>
    <fullName>Value_In_Task_Connect_To_DD__c</fullName>
    <description>This is the value that is selected when user chooses to create a task with this filing and selects  a certain entity to connect to the task. This entity has this number on the server side</description>
    <label>Value In Task Connect-To DD</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>